@@ -1,5 +1,5 @@
 /*
-   Copyright (C) 2001-2012, 2014-2021 Free Software Foundation, Inc.
+   Copyright (C) 2001-2012, 2014-2022 Free Software Foundation, Inc.
    Written by Keisuke Nishida, Roger While, Simon Sobisch, Edward Hart
 
    This file is part of GnuCOBOL.
@@ -66,13 +66,16 @@ CB_CONFIG_INT (cb_lit_length, "literal-length", 1, COB_MAX_LITERAL_LEN, _("<numb
 CB_CONFIG_INT (cb_numlit_length, "numeric-literal-length", 1, COB_MAX_DIGITS, CB_XRANGE(1,COB_MAX_DIGITS),
 	_("maximum numeric literal size"))
 
-CB_CONFIG_SINT (cb_default_byte, "defaultbyte", -1, 255, _("<number>"),
-	_("initialize fields without VALUE to <number>\n"
-	  "                        * decimal 0..255 representing a character\n"
-	  "                        * default: initialize to picture"))
-
 
 /* Flags with required parameter and special values */
+
+CB_CONFIG_ANY (signed int, cb_default_byte, "defaultbyte",
+	_("default initialization for fields without VALUE, may be one of\n"
+	  "                        * character in quotes\n"
+	  "                        * decimal 0..255 representing a character\n"
+	  "                        * \"init\" to initialize to PICTURE/USAGE\n"
+	  "                        * \"none\" to do no explicit initialization\n"
+	  "                        * default: \"init\""))
 
 CB_CONFIG_ANY (enum cb_std_def, cb_std_define, "standard-define", NULL) /* Used Standard (set via -std) */
 
