@@ -261,7 +261,7 @@ assign-disk-from:			unconformable
 vsam-status:				unconformable
 self-call-recursive:		skip
 record-contains-depending-clause:	unconformable
-defaultbyte: ignore
+defaultbyte:		none	# "undefined"
 
 # use fixed word list, synonyms and exceptions specified there
 reserved-words:		COBOL2014
