@@ -281,7 +281,7 @@ assign-disk-from:			ok
 vsam-status:				ignore
 self-call-recursive:		warning
 record-contains-depending-clause:	unconformable
-defaultbyte: ignore
+defaultbyte:		init
 
 # use complete word list; synonyms and exceptions are specified below
 reserved-words:		default
