@@ -267,7 +267,7 @@ assign-disk-from:			unconformable
 vsam-status:				unconformable
 self-call-recursive:		skip
 record-contains-depending-clause:	unconformable
-defaultbyte: ignore
+defaultbyte:		" "	# not verified, but possibly like ACU/MF
 
 # obsolete in COBOL85 and currently not available as dialect features:
 # 1: All literal with numeric or numeric edited item
