@@ -278,9 +278,9 @@ assign-using-variable:			unconformable
 assign-ext-dyn:				unconformable
 assign-disk-from:			unconformable
 vsam-status:				unconformable
-defaultbyte: ignore
 self-call-recursive:		skip
 record-contains-depending-clause:	obsolete
+defaultbyte:		none	# "not specifically defined in Standard COBOL"
 
 # obsolete in COBOL85 and currently not available as dialect features:
 # 1: All literal with numeric or numeric edited item
