@@ -41,9 +41,6 @@ NEWS - user visible changes				-*- outline -*-
    to cater for new features of COBOL 202x; if compiling with any non-strict
    dialect you may need to unreserve any conflicting words / functions
 
-** in 64-bit environments, the maximum field size was increased from
-   268435456 bytes (999999998 bytes for OCCURS UNBOUNDED) to 2 GB
-
 ** in 64-bit environments, the default size for BY VALUE parameters has changed:
    If no explicit SIZE IS clause is specified,
 	old behavior: parameter passed as 32-bit value
@@ -59,6 +56,13 @@ NEWS - user visible changes				-*- outline -*-
    while -fodoslide still works as before it is now implied with
    -std=ibm/mvs/bs2000, for compatibility to previous behavior compile
    with -fno-odoslide
+
+** the compile flag -fdefaultbyte was moved to a dialect configuration,
+   while -fdefaultbyte still works as before it is now implied as binary
+   zero with -std=ibm/mvs/bs2000, space for -std=mf/acu/rm/realia, and
+   no defined initialization for -std=cobol85/cobol2002/cobol2014/xopen,
+   it is unchanged for -std=default (initialize to PICTURE/USAGE)
+   for compatibility to previous behavior compile with -fdefaultbyte=init
 
 ** the dialect configuration option larger-redefines-ok was changed to
    a support option larger-redefines; if specified on the command-line
@@ -131,6 +135,9 @@ NEWS - user visible changes				-*- outline -*-
    in listing tests) e.g. date only `-DLISTING_TIMESTAMP_FORMAT="%Y-%m-%d"`
 
 * More notable changes
+
+** in 64-bit environments, the maximum field size was increased from
+   268435456 bytes (999999998 bytes for OCCURS UNBOUNDED) to 2 GB
 
 ** the call-stack on error / in the dump file now contains all parameters given
    to the program via command line options, if any
